2020-05-17  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION (_MAKE_VERSION): 20200517
	Merge with NetBSD make, pick up
	o modified dollar tests to avoid shell dependencies
	o new tests for .INCLUDEFROM

2020-05-16  Simon J Gerraty  <sjg@beast.crufty.net>

	* unit-tests/dollar.mk: tweak  '1 dollar literal' test
	to not depend so much on shell behavior

2020-05-10  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION (_MAKE_VERSION): 20200510
	Merge with NetBSD make, pick up
	o unit test for dollar handling

2020-05-06  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION (_MAKE_VERSION): 20200506
	Merge with NetBSD make, pick up
	o str.c: empty string does not match % pattern
	  plus unit-test changes

2020-05-04  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION (_MAKE_VERSION): 20200504
	May the 4th be with you
	Merge with NetBSD make, pick up
	o var.c: import handling of old sysV style modifier using '%'
	o str.c: refactor brk_string
	o unit-tests: add test case for lazy conditions

2020-04-18  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION (_MAKE_VERSION): 20200418

	* configure.in: use_makefile=no for cygwin et al.
	case insensitive filesystems just don't work if both
	makefile and Makefile exist.
	NOTE: bmake does not support cygwin and likely never will,
	but if brave souls want to try it - help them out.

2020-04-02  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION (_MAKE_VERSION): 20200402
	Merge with NetBSD make, pick up
	o meta.c: meta_oodate, CHECK_VALID_META is too aggressive for CMD
	  a blank command is perfectly valid.

2020-03-30  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION (_MAKE_VERSION): 20200330
	Merge with NetBSD make, pick up
	o make.h: extern debug_file

2020-03-18  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION (_MAKE_VERSION): 20200318
	Merge with NetBSD make, pick up
	o meta.c: meta_oodate, check for corrupted meta file
	  earlier and more often.

2020-02-20  Simon J Gerraty  <sjg@beast.crufty.net>
